--- a/template.css
+++ b/template.css
@@ -20,13 +20,14 @@ html{
 html, body{
 	margin:0;
 	padding:0;
-	height:100%;
+	min-height:100%;
 }
 
 header{
 	padding:0.01em 16px;
-	color:#fff !important; background-color:#000000 !important;
-	padding:8px 16px!important;
+	color:#fff;
+	background-color:#000000;
+	padding:8px 16px;
 }
 
 header div h1{
@@ -80,12 +81,54 @@ ul.topnav li.icon {display: none;}
   ul.topnav.responsive li a {
     display: block;
     text-align: left;
+	margin-top:16px;
   }
 }
 
 section {
+	border:solid black 1px;
 	padding:10px;
-	padding-bottom:60px;
+}
+
+.third_column{
+	border:solid black 1px;
+	margin:0 5%;
+	display:inline-block;
+	height:50vh;
+	max-width:90%;
+}
+
+.third_column div{
+	float:left;
+	text-align:center;
+	margin-left:2em;
+	box-shadow:0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+	border:solid black 1px;
+	position:relative;
+	width:30%;
+	height:96%;
+}
+
+.third_column div img{
+	max-height:20vh;
+	max-width:20vw;
+}
+
+@media screen and (max-width:680px) {
+  .third_column{
+	padding:0 8px;
+	text-align:center;
+	display:inline-block;
+  }
+
+  .third_column div{
+	padding:0 8px;
+	box-shadow:0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+	padding-top:8px;
+	min-height:460px;
+	float:none;
+	width:100%;
+  }
 }
 
 #login_temp{
@@ -98,10 +141,10 @@ form input{
 }
 
 footer{
-   position:absolute;
+   position:fixed;
    bottom:0;
    width:100%;
-   height:60px;  
+   background-color:#808080;
 }
 .animate-bottom{
 	position:relative;
@@ -114,6 +157,7 @@ footer{
 
 
 #fine_print{
+	padding:10px;
 	font-size:10px;
 	color:#000066;
 }
